DepotGrammar/grammar/DepotParser.py
# Generated from DepotParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DepotParser ( Parser ):

    grammarFileName = "DepotParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "':'", "'{'", "'}'", "'DEPOT'", 
                     "'SECTION'", "'SECTIONS'", "'PRODUCT'", "'CATEGORY'", 
                     "'UNIT'", "<INVALID>", "'EMPLOYEES'", "'EMPLOYEE'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "COMMA", "COLON", "LCURLY", "RCURLY", 
                      "DEPOT", "SECTION", "SECTIONS", "PRODUCT", "CATEGORY", 
                      "UNIT", "UNIT_NAME", "EMPLOYEES", "EMPLOYEE", "DATE_SEP", 
                      "ID", "DATE", "INT", "WS" ]

    RULE_program = 0
    RULE_depot = 1
    RULE_depot_name = 2
    RULE_depot_body = 3
    RULE_section_list = 4
    RULE_section = 5
    RULE_section_name = 6
    RULE_section_body = 7
    RULE_product = 8
    RULE_product_name = 9
    RULE_product_body = 10
    RULE_category = 11
    RULE_category_name = 12
    RULE_quantity = 13
    RULE_unit = 14
    RULE_unit_name = 15
    RULE_employee_list = 16
    RULE_employees_body = 17
    RULE_employee = 18
    RULE_employee_body = 19
    RULE_employee_sections = 20
    RULE_name = 21
    RULE_surname = 22
    RULE_office = 23
    RULE_employment_date = 24
    RULE_employee_section_name = 25

    ruleNames =  [ "program", "depot", "depot_name", "depot_body", "section_list", 
                   "section", "section_name", "section_body", "product", 
                   "product_name", "product_body", "category", "category_name", 
                   "quantity", "unit", "unit_name", "employee_list", "employees_body", 
                   "employee", "employee_body", "employee_sections", "name", 
                   "surname", "office", "employment_date", "employee_section_name" ]

    EOF = Token.EOF
    COMMA=1
    COLON=2
    LCURLY=3
    RCURLY=4
    DEPOT=5
    SECTION=6
    SECTIONS=7
    PRODUCT=8
    CATEGORY=9
    UNIT=10
    UNIT_NAME=11
    EMPLOYEES=12
    EMPLOYEE=13
    DATE_SEP=14
    ID=15
    DATE=16
    INT=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def depot(self):
            return self.getTypedRuleContext(DepotParser.DepotContext,0)


        def EOF(self):
            return self.getToken(DepotParser.EOF, 0)

        def getRuleIndex(self):
            return DepotParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = DepotParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.depot()
            self.state = 53
            self.match(DepotParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DepotContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEPOT(self):
            return self.getToken(DepotParser.DEPOT, 0)

        def depot_name(self):
            return self.getTypedRuleContext(DepotParser.Depot_nameContext,0)


        def depot_body(self):
            return self.getTypedRuleContext(DepotParser.Depot_bodyContext,0)


        def getRuleIndex(self):
            return DepotParser.RULE_depot

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDepot" ):
                listener.enterDepot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDepot" ):
                listener.exitDepot(self)




    def depot(self):

        localctx = DepotParser.DepotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_depot)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(DepotParser.DEPOT)
            self.state = 56
            self.depot_name()
            self.state = 57
            self.depot_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Depot_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DepotParser.ID, 0)

        def getRuleIndex(self):
            return DepotParser.RULE_depot_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDepot_name" ):
                listener.enterDepot_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDepot_name" ):
                listener.exitDepot_name(self)




    def depot_name(self):

        localctx = DepotParser.Depot_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_depot_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(DepotParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Depot_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(DepotParser.LCURLY, 0)

        def section_list(self):
            return self.getTypedRuleContext(DepotParser.Section_listContext,0)


        def employee_list(self):
            return self.getTypedRuleContext(DepotParser.Employee_listContext,0)


        def RCURLY(self):
            return self.getToken(DepotParser.RCURLY, 0)

        def getRuleIndex(self):
            return DepotParser.RULE_depot_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDepot_body" ):
                listener.enterDepot_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDepot_body" ):
                listener.exitDepot_body(self)




    def depot_body(self):

        localctx = DepotParser.Depot_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_depot_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(DepotParser.LCURLY)
            self.state = 62
            self.section_list()
            self.state = 63
            self.employee_list()
            self.state = 64
            self.match(DepotParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Section_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DepotParser.SectionContext)
            else:
                return self.getTypedRuleContext(DepotParser.SectionContext,i)


        def getRuleIndex(self):
            return DepotParser.RULE_section_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection_list" ):
                listener.enterSection_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection_list" ):
                listener.exitSection_list(self)




    def section_list(self):

        localctx = DepotParser.Section_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_section_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 66
                self.section()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SECTION(self):
            return self.getToken(DepotParser.SECTION, 0)

        def section_name(self):
            return self.getTypedRuleContext(DepotParser.Section_nameContext,0)


        def section_body(self):
            return self.getTypedRuleContext(DepotParser.Section_bodyContext,0)


        def getRuleIndex(self):
            return DepotParser.RULE_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection" ):
                listener.enterSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection" ):
                listener.exitSection(self)




    def section(self):

        localctx = DepotParser.SectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_section)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(DepotParser.SECTION)
            self.state = 73
            self.section_name()
            self.state = 74
            self.section_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Section_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DepotParser.ID)
            else:
                return self.getToken(DepotParser.ID, i)

        def getRuleIndex(self):
            return DepotParser.RULE_section_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection_name" ):
                listener.enterSection_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection_name" ):
                listener.exitSection_name(self)




    def section_name(self):

        localctx = DepotParser.Section_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_section_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.match(DepotParser.ID)
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Section_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(DepotParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DepotParser.RCURLY, 0)

        def product(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DepotParser.ProductContext)
            else:
                return self.getTypedRuleContext(DepotParser.ProductContext,i)


        def getRuleIndex(self):
            return DepotParser.RULE_section_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection_body" ):
                listener.enterSection_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection_body" ):
                listener.exitSection_body(self)




    def section_body(self):

        localctx = DepotParser.Section_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_section_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(DepotParser.LCURLY)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 82
                self.product()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(DepotParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProductContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRODUCT(self):
            return self.getToken(DepotParser.PRODUCT, 0)

        def product_name(self):
            return self.getTypedRuleContext(DepotParser.Product_nameContext,0)


        def product_body(self):
            return self.getTypedRuleContext(DepotParser.Product_bodyContext,0)


        def getRuleIndex(self):
            return DepotParser.RULE_product

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProduct" ):
                listener.enterProduct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProduct" ):
                listener.exitProduct(self)




    def product(self):

        localctx = DepotParser.ProductContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_product)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(DepotParser.PRODUCT)
            self.state = 91
            self.product_name()
            self.state = 92
            self.product_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Product_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DepotParser.ID)
            else:
                return self.getToken(DepotParser.ID, i)

        def getRuleIndex(self):
            return DepotParser.RULE_product_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProduct_name" ):
                listener.enterProduct_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProduct_name" ):
                listener.exitProduct_name(self)




    def product_name(self):

        localctx = DepotParser.Product_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_product_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.match(DepotParser.ID)
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Product_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(DepotParser.LCURLY, 0)

        def category(self):
            return self.getTypedRuleContext(DepotParser.CategoryContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DepotParser.COMMA)
            else:
                return self.getToken(DepotParser.COMMA, i)

        def quantity(self):
            return self.getTypedRuleContext(DepotParser.QuantityContext,0)


        def unit(self):
            return self.getTypedRuleContext(DepotParser.UnitContext,0)


        def RCURLY(self):
            return self.getToken(DepotParser.RCURLY, 0)

        def getRuleIndex(self):
            return DepotParser.RULE_product_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProduct_body" ):
                listener.enterProduct_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProduct_body" ):
                listener.exitProduct_body(self)




    def product_body(self):

        localctx = DepotParser.Product_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_product_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(DepotParser.LCURLY)
            self.state = 100
            self.category()
            self.state = 101
            self.match(DepotParser.COMMA)
            self.state = 102
            self.quantity()
            self.state = 103
            self.match(DepotParser.COMMA)
            self.state = 104
            self.unit()
            self.state = 105
            self.match(DepotParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CategoryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CATEGORY(self):
            return self.getToken(DepotParser.CATEGORY, 0)

        def category_name(self):
            return self.getTypedRuleContext(DepotParser.Category_nameContext,0)


        def getRuleIndex(self):
            return DepotParser.RULE_category

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCategory" ):
                listener.enterCategory(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCategory" ):
                listener.exitCategory(self)




    def category(self):

        localctx = DepotParser.CategoryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_category)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(DepotParser.CATEGORY)
            self.state = 108
            self.category_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Category_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DepotParser.ID)
            else:
                return self.getToken(DepotParser.ID, i)

        def getRuleIndex(self):
            return DepotParser.RULE_category_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCategory_name" ):
                listener.enterCategory_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCategory_name" ):
                listener.exitCategory_name(self)




    def category_name(self):

        localctx = DepotParser.Category_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_category_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 110
                self.match(DepotParser.ID)
                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(DepotParser.INT, 0)

        def getRuleIndex(self):
            return DepotParser.RULE_quantity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantity" ):
                listener.enterQuantity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantity" ):
                listener.exitQuantity(self)




    def quantity(self):

        localctx = DepotParser.QuantityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_quantity)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(DepotParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNIT(self):
            return self.getToken(DepotParser.UNIT, 0)

        def unit_name(self):
            return self.getTypedRuleContext(DepotParser.Unit_nameContext,0)


        def getRuleIndex(self):
            return DepotParser.RULE_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit" ):
                listener.enterUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit" ):
                listener.exitUnit(self)




    def unit(self):

        localctx = DepotParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_unit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(DepotParser.UNIT)
            self.state = 118
            self.unit_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unit_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNIT_NAME(self):
            return self.getToken(DepotParser.UNIT_NAME, 0)

        def getRuleIndex(self):
            return DepotParser.RULE_unit_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit_name" ):
                listener.enterUnit_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit_name" ):
                listener.exitUnit_name(self)




    def unit_name(self):

        localctx = DepotParser.Unit_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_unit_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(DepotParser.UNIT_NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Employee_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EMPLOYEES(self):
            return self.getToken(DepotParser.EMPLOYEES, 0)

        def employees_body(self):
            return self.getTypedRuleContext(DepotParser.Employees_bodyContext,0)


        def getRuleIndex(self):
            return DepotParser.RULE_employee_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmployee_list" ):
                listener.enterEmployee_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmployee_list" ):
                listener.exitEmployee_list(self)




    def employee_list(self):

        localctx = DepotParser.Employee_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_employee_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(DepotParser.EMPLOYEES)
            self.state = 123
            self.employees_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Employees_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(DepotParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DepotParser.RCURLY, 0)

        def employee(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DepotParser.EmployeeContext)
            else:
                return self.getTypedRuleContext(DepotParser.EmployeeContext,i)


        def getRuleIndex(self):
            return DepotParser.RULE_employees_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmployees_body" ):
                listener.enterEmployees_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmployees_body" ):
                listener.exitEmployees_body(self)




    def employees_body(self):

        localctx = DepotParser.Employees_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_employees_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(DepotParser.LCURLY)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 126
                self.employee()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(DepotParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmployeeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EMPLOYEE(self):
            return self.getToken(DepotParser.EMPLOYEE, 0)

        def name(self):
            return self.getTypedRuleContext(DepotParser.NameContext,0)


        def surname(self):
            return self.getTypedRuleContext(DepotParser.SurnameContext,0)


        def employee_body(self):
            return self.getTypedRuleContext(DepotParser.Employee_bodyContext,0)


        def getRuleIndex(self):
            return DepotParser.RULE_employee

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmployee" ):
                listener.enterEmployee(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmployee" ):
                listener.exitEmployee(self)




    def employee(self):

        localctx = DepotParser.EmployeeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_employee)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(DepotParser.EMPLOYEE)
            self.state = 135
            self.name()
            self.state = 136
            self.surname()
            self.state = 137
            self.employee_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Employee_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(DepotParser.LCURLY, 0)

        def office(self):
            return self.getTypedRuleContext(DepotParser.OfficeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DepotParser.COMMA)
            else:
                return self.getToken(DepotParser.COMMA, i)

        def employment_date(self):
            return self.getTypedRuleContext(DepotParser.Employment_dateContext,0)


        def employee_sections(self):
            return self.getTypedRuleContext(DepotParser.Employee_sectionsContext,0)


        def RCURLY(self):
            return self.getToken(DepotParser.RCURLY, 0)

        def getRuleIndex(self):
            return DepotParser.RULE_employee_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmployee_body" ):
                listener.enterEmployee_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmployee_body" ):
                listener.exitEmployee_body(self)




    def employee_body(self):

        localctx = DepotParser.Employee_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_employee_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(DepotParser.LCURLY)
            self.state = 140
            self.office()
            self.state = 141
            self.match(DepotParser.COMMA)
            self.state = 142
            self.employment_date()
            self.state = 143
            self.match(DepotParser.COMMA)
            self.state = 144
            self.employee_sections()
            self.state = 145
            self.match(DepotParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Employee_sectionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SECTION(self):
            return self.getToken(DepotParser.SECTION, 0)

        def employee_section_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DepotParser.Employee_section_nameContext)
            else:
                return self.getTypedRuleContext(DepotParser.Employee_section_nameContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DepotParser.COMMA)
            else:
                return self.getToken(DepotParser.COMMA, i)

        def getRuleIndex(self):
            return DepotParser.RULE_employee_sections

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmployee_sections" ):
                listener.enterEmployee_sections(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmployee_sections" ):
                listener.exitEmployee_sections(self)




    def employee_sections(self):

        localctx = DepotParser.Employee_sectionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 40, self.RULE_employee_sections)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(DepotParser.SECTION)
            self.state = 148
            self.employee_section_name()
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 149
                self.match(DepotParser.COMMA)
                self.state = 150
                self.employee_section_name()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DepotParser.ID, 0)

        def getRuleIndex(self):
            return DepotParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):
